# a-student-support-ai-agent

./: README.md  crawl_data.ipynb  crawl_utils.ipynb  requirements.txt
backend/: api.py  api_temp.py  check_socket.py  complete_rag.ipynb  doc_to_id.json  engine.py  get_response_synth.py  main.py  pyproject.toml
backend/data/: sotay.md
backend/rag/: data.py  rag.py
backend/storage_context/: docstore.json  index_store.json
backend/wandb/: latest-run
backend/wandb/run-20241128_150458-7xge4ij5/: run-7xge4ij5.wandb
backend/wandb/run-20241128_150458-7xge4ij5/files/: config.yaml  requirements.txt  wandb-metadata.json
backend/wandb/run-20241128_152356-2j40kcbu/: run-2j40kcbu.wandb
backend/wandb/run-20241128_152356-2j40kcbu/files/: wandb-metadata.json
wandb/: latest-run
wandb/run-20241128_150606-ql6ocp8y/: run-ql6ocp8y.wandb
wandb/run-20241128_150606-ql6ocp8y/files/: config.yaml  wandb-metadata.json
wandb/run-20241128_150726-a9w0mszv/: run-a9w0mszv.wandb
wandb/run-20241128_150726-a9w0mszv/files/: requirements.txt  wandb-metadata.json
