[tool.poetry]
name = "chatbot-backend"
version = "0.1.0"
description = ""
authors = ["longsogood <vietlong685572@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
llama-index-embeddings-huggingface = "^0.4.0"
llama-index = "^0.12.4"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
websockets = "^14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
